# Modular-Diffusion

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
Documentation/: README.md
configs/: cifar10_dit_ddpm.yaml  cifar10_mlp_ddpm.yaml  cifar10_transformer_ddpm.yaml  cifar10_unet_cosine.yaml  cifar10_unet_ddpm.yaml  cifar10_unet_sigmoid_ddpm.yaml  cifar10_unet_snr_cosine.yaml  cifar10_unet_x0_ddpm.yaml  latent_conv_autoencoder_smoke.yaml  latent_unet_ddim.yaml  mnist_mlp_ddpm.yaml  mnist_unet_ddpm.yaml
diffusion/: __init__.py  builders.py  conditioning.py  devices.py  download_vae.py  ema.py  losses.py  parameterizations.py  processes.py  sample.py  samplers.py  schedules.py  train.py  visualize.py
diffusion/data/: __init__.py  cifar10.py
diffusion/models/: __init__.py  autoencoder.py  conditioning.py  diffusers_autoencoder.py  dit.py  mlp.py  transformer.py  unet.py
diffusion/representations/: __init__.py  latent.py  pixel.py
docs/: classifier_free_guidance.md  diffusion_overview.md  experiment_matrix.md  latent_diffusion.md  prediction_targets.md  samplers.md  schedules.md  server_experiments.md  understanding_diffusion.md
scripts/: run_all_experiments_cuda_1_2.sh
tests/: test_smoke.py
