[project]
name = "modular-diffusion"
version = "0.1.0"
description = "Composable diffusion research playground"
requires-python = ">=3.10"
dependencies = [
  "datasets",
  "diffusers",
  "safetensors",
  "torch",
  "torchvision",
  "pyyaml",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.packages.find]
include = ["diffusion*"]
